force-app/main/default/objects/blng__LegalEntity__c/fields/blng__Active__c.field-meta.xml
<CustomField>
    <fullName>blng__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Pour désactiver cette entité juridique, désélectionnez la case. Les transactions ou attributions
        existantes ou passées ne sont pas affectées.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>