force-app/main/default/objects/blng__LegalEntity__c/fields/blng__LegalEntityNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntityNumber__c</fullName>
    <displayFormat>LE-{00000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Système généré. Un numéro unique pour cet enregistrement d&apos;entité juridique.</inlineHelpText>
    <label>Legal Entity Number</label>
    <type>AutoNumber</type>
</CustomField>