force-app/main/default/objects/blng__LegalEntity__c/fields/LPCR_IdExterne_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Compte__c</fullName>
    <label>ID externe compte</label>
    <length>180</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>