force-app/main/default/objects/blng__LegalEntity__c/fields/LPCR_RaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RaisonSociale__c</fullName>
    <label>Raison Sociale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>