force-app/main/default/objects/blng__LegalEntity__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>EURL</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>SARL</fullName>
            </value>
            <value>
                <fullName>SASU</fullName>
            </value>
            <value>
                <fullName>SCIC</fullName>
            </value>
            <value>
                <fullName>SCOP</fullName>
            </value>
            <value>
                <fullName>Société mutualiste</fullName>
            </value>
            <value>
                <fullName>SPRL</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Associative</fullName>
            </value>
            <value>
                <fullName>Hospitalière</fullName>
            </value>
            <value>
                <fullName>Municipale</fullName>
            </value>
            <value>
                <fullName>Mutualiste</fullName>
            </value>
            <value>
                <fullName>Privée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>